--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -38,7 +38,7 @@ class User:
 
 <TipInfo>
   Features are the abstract underlying attributes of your data—id, birthday, name, age, is_adult are all features.
-  The `User` class is a **feature class** (also sometimes referred to as a **feature set**. Specific instances
+  The `User` class is a **feature class** (also sometimes referred to as a **feature set**). Specific instances
   of a feature class are **feature class instances**.
 </TipInfo>
 
