--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -48,7 +48,7 @@ name fields that we've defined above. Some might be calculated in real time base
 the current timestamp (like the age feature) or a different upstream feature (like the
 `is_adult` feature).
 
-In fact, you could deploy the code above to Chalk and it would be considered valid.
+You could deploy the code above to Chalk and it would be considered valid.
 However, if you tried to query for a field (for example, if you asked chalk to return the name
 of a user with id 1) then you'd get an error.
 
